[Bug #77723] - Header - Layout of tiles for Mega Menu1 is not correct (http://redmine.dtdigital.com.au/issues/77723) [Bug #77721] - Header - Tiles of Mega menu 1 needs to be left aligned (http://redmine.dtdigital.com.au/issues/77721)

--- a/tourismaustralia-styleguide/assets/scss/site/modules/_header-megamenu-mosaic.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_header-megamenu-mosaic.scss
@@ -63,5 +63,6 @@
 
     @include breakpoint(lg) {
         width: 220px;
+        min-height: 127px;
     }
 }
